--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "json-server": "^0.16.3",
     "modern-normalize": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.2",
     "sharp": "^0.27.2",
     "shortid": "^2.2.16",
