--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "sharp": "^0.27.2",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.0"
